Refatora controller, form requests para validação, documentação
