# app/Http/Requests/UpdateUserRequest.php
@@ -1,0 +1,58 @@
+<?php
+
+namespace App\Http\Requests;
+
+use Illuminate\Foundation\Http\FormRequest;
+use Illuminate\Validation\Rules\Password;
+
+/**
+ * @OA\Schema(
+ *     schema="UpdateUserRequest",
+ *     type="object",
+ *     title="Update User",
+ *     description="User object used to update an user.",
+ *
+ *     @OA\Property(property="name", type="string", example="John Doe"),
+ *     @OA\Property(property="email", type="string", example="john@example.com"),
+ *     @OA\Property(property="password", type="string", format="password", example="password")
+ * )
+ */
+class UpdateUserRequest extends FormRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     */
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array<string, \Illuminate\Contracts\Validation\ValidationRule|array<mixed>|string>
+     */
+    public function rules(): array
+    {
+        $userId = $this->route('user')->id;
+
+        return [
+            'name' => [
+                'sometimes',
+                'string',
+                'min:1',
+                'max:255',
+            ],
+            'email' => [
+                'sometimes',
+                'email',
+                "unique:users,email,$userId",
+            ],
+            'password' => [
+                'sometimes',
+                'string',
+                Password::min(8),
+            ],
+        ];
+    }
+}
